--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
         </div>
     </header>
 
-
     <main class="products">
         <div class="tabs container">
 
@@ -294,7 +293,6 @@
         </div>
     </main>
 
-
     <section class="info container">
 
 
@@ -305,9 +303,10 @@
         <div class="info-txt">
             <h2>Informacion</h2>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas nulla et numquam, reprehenderit ab ut
-                quis
-                ipsum, exercitationem inventore deserunt reiciendis nesciunt. Fugit suscipit corrupti rem. Magnam
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Quas nulla et numquam, reprehenderit ab ut quis
+                ipsum, exercitationem inventore deserunt reiciendis nesciunt.
+                Fugit suscipit corrupti rem. Magnam
                 nostrum molestiae quisquam.
             </p>
             <a href="#" class="btn-2">Mas Informacion</a>
@@ -360,6 +359,63 @@
         </div>
     </section>
 
+    <section>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3693.6521045205714!2d-97.86322862396528!3d22.21532374596883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjLCsDEyJzU1LjIiTiA5N8KwNTEnMzguNCJX!5e0!3m2!1ses-419!2smx!4v1706914530791!5m2!1ses-419!2smx" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <footer class="footer container">
+
+        <img class="logo-2" src="images/logo.svg" alt="">
+        <div class="links">
+            <h4>Lorem</h4>
+        </div>
+        <ul>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+        </ul>
+        <div class="links">
+            <h4>Lorem</h4>
+        </div>
+        <ul>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+        </ul>
+        <div class="links">
+            <h4>Lorem</h4>
+        </div>
+        <ul>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+            <li><a href="#">Lorem</a></li>
+        </ul>
+        <div class="links">
+            <h4>Redes Sociales</h4>
+            <div class="socials">
+                <a href="#">
+                    <div class="social">
+                        <img src="images/s1.svg" alt="">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="social">
+                        <img src="images/s2.svg" alt="">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="social">
+                        <img src="images/s3.svg" alt="">
+                    </div>
+                </a>
+            </div>
+        </div>
+        
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
