solucion de codigo

--- a/index.html
+++ b/index.html
@@ -337,17 +337,17 @@
                 <div class="txt">
                     <h4>Redes Sociales</h4>
                     <div class="socials">
-                        <a href="#">
+                        <a href="https://www.facebook.com/?locale=es_LA">
                             <div class="social">
                                 <img src="images/s1.svg" alt="">
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="https://www.instagram.com/">
                             <div class="social">
                                 <img src="images/s2.svg" alt="">
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="https://twitter.com/?lang=es">
                             <div class="social">
                                 <img src="images/s3.svg" alt="">
                             </div>
